# fastapi_learning

./: main.py  pyproject.toml
